k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: klimatkollen
  labels:
    name: klimatkollen
    environment: production
