k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ExternalName
  externalName: garbo.garbo-stage.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
