k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: klimatkollen-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: klimatkollen-frontend
